# MouseEditor

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.bat  build.sh  buildRelease.bat  clean.bat  cmake_install.cmake
.github/workflows/: AppCI.yml  Linux.yml  Windows.yml  linux.yml  macOS.yml
src/: config.h  main.c  main.cpp  reader.h  state.h
src/file/: file.h  file_read.c  file_size.c  file_write.c
src/log/: log.c  log.h
src/misc/win/: win_unistd.h
src/term/: altscreen.h  cursor.h  key.h  raw.h  term.h  text.h  window.h
src/ui/: ui.cpp  ui.h  widget.cpp
